Fix material input outline on firefox

--- a/app/styles/input-material.scss
+++ b/app/styles/input-material.scss
@@ -15,6 +15,7 @@ $thick-line: 2px;
     background: transparent;
     border: 0;
     border-bottom: $thin-line solid $text-color;
+    box-shadow: none;
     display: block;
     padding-bottom: $thick-line;
     transition: $input-animation;
